radio station map, more i18n

--- a/app/explore2/assets/i18n/conzept-ar.json
+++ b/app/explore2/assets/i18n/conzept-ar.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "المساعدة في القراءة",
   "app-menu-bread": "بداية الكلمة بالخط العريض",
   "app-menu-ai-tutor": "مدرس الذكاء الاصطناعي",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "المرجعية العرض الحالي",
   "app-menu-clone-tab": "علامة التبويب استنساخ",
   "app-menu-plant-identification": "تحديد النبات",
@@ -184,7 +189,7 @@
   "app-guide-atom": "ذرة",
   "app-guide-protist": "بروتيست",
   "app-guide-country-map": "خريطة البلد",
-  "app-guide-capitol": "الكابيتول",
+  "app-guide-capital": "الكابيتول",
   "app-guide-form-of-government": "شكل من الحكومة.",
   "app-guide-religion": "دِين",
   "app-guide-period": "فترة",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "مذياع",
   "app-guide-news-tv": "تلفزيون",
   "app-guide-news-economic-indicators": "المؤشرات الاقتصادية",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "الصراعات",
   "app-guide-radio": "مذياع",
   "app-menu-country-select": "دولة",
