--- a/app/explore2/assets/i18n/conzept-bn.json
+++ b/app/explore2/assets/i18n/conzept-bn.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "পড়ার সহায়তা",
   "app-menu-bread": "শব্দ শুরু বোল্ডিং",
   "app-menu-ai-tutor": "এআই টিউটর",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "বুকমার্ক বর্তমান দৃশ্য",
   "app-menu-clone-tab": "ক্লোন ট্যাব",
   "app-menu-plant-identification": "উদ্ভিদ সনাক্তকরণ",
@@ -184,7 +189,7 @@
   "app-guide-atom": "পরমাণু",
   "app-guide-protist": "প্রতিবাদী",
   "app-guide-country-map": "দেশের মানচিত্র",
-  "app-guide-capitol": "ক্যাপিটল",
+  "app-guide-capital": "ক্যাপিটল",
   "app-guide-form-of-government": "gov এর ফর্ম",
   "app-guide-religion": "ধর্ম",
   "app-guide-period": "সময়কাল",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "রেডিও",
   "app-guide-news-tv": "টেলিভিশন",
   "app-guide-news-economic-indicators": "অর্থনৈতিক সূচক",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "দ্বন্দ্ব",
   "app-guide-radio": "রেডিও",
   "app-menu-country-select": "দেশ",
