--- a/app/explore2/assets/i18n/conzept-ca.json
+++ b/app/explore2/assets/i18n/conzept-ca.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "ajuda a la lectura",
   "app-menu-bread": "inici de paraula en negreta",
   "app-menu-ai-tutor": "Tutor d'IA",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "marca la vista actual",
   "app-menu-clone-tab": "pestanya de clonació",
   "app-menu-plant-identification": "identificació de plantes",
@@ -184,7 +189,7 @@
   "app-guide-atom": "àtom",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mapa del país",
-  "app-guide-capitol": "capitoli",
+  "app-guide-capital": "capitoli",
   "app-guide-form-of-government": "forma de govern.",
   "app-guide-religion": "religió",
   "app-guide-period": "període",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "ràdio",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "indicadors econòmics",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "conflictes",
   "app-guide-radio": "ràdio",
   "app-menu-country-select": "país",
