--- a/app/explore2/assets/i18n/conzept-ceb.json
+++ b/app/explore2/assets/i18n/conzept-ceb.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "tabang sa pagbasa",
   "app-menu-bread": "pulong-pagsugod bolding",
   "app-menu-ai-tutor": "AI tutor",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "bookmark karon nga pagtan-aw",
   "app-menu-clone-tab": "clone nga tab",
   "app-menu-plant-identification": "pag-ila sa tanom",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atomo",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mapa sa nasud",
-  "app-guide-capitol": "kapitolyo",
+  "app-guide-capital": "kapitolyo",
   "app-guide-form-of-government": "porma sa gov.",
   "app-guide-religion": "relihiyon",
   "app-guide-period": "panahon",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "radyo",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "mga timailhan sa ekonomiya",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "mga panagsumpaki",
   "app-guide-radio": "radyo",
   "app-menu-country-select": "nasud",
