--- a/app/explore2/assets/i18n/conzept-cs.json
+++ b/app/explore2/assets/i18n/conzept-cs.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "pomoc při čtení",
   "app-menu-bread": "tučné písmo na začátku slova",
   "app-menu-ai-tutor": "učitel AI",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "uložit aktuální pohled do záložek",
   "app-menu-clone-tab": "karta klon",
   "app-menu-plant-identification": "identifikace rostlin",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atom",
   "app-guide-protist": "protist",
   "app-guide-country-map": "mapa země",
-  "app-guide-capitol": "hlavní město",
+  "app-guide-capital": "hlavní město",
   "app-guide-form-of-government": "forma vl.",
   "app-guide-religion": "náboženství",
   "app-guide-period": "doba",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "rádio",
   "app-guide-news-tv": "televize",
   "app-guide-news-economic-indicators": "ekonomické ukazatele",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "konflikty",
   "app-guide-radio": "rádio",
   "app-menu-country-select": "země",
