--- a/app/explore2/assets/i18n/conzept-de.json
+++ b/app/explore2/assets/i18n/conzept-de.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "Lesehilfe",
   "app-menu-bread": "Wortanfang in Fettschrift",
   "app-menu-ai-tutor": "KI-Tutor",
+  "app-menu-datasources": "Datenquellen",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "Aktuelle Ansicht als Lesezeichen speichern",
   "app-menu-clone-tab": "Registerkarte „Klonen“.",
   "app-menu-plant-identification": "Pflanzenidentifikation",
@@ -184,7 +189,7 @@
   "app-guide-atom": "Atom",
   "app-guide-protist": "Protist",
   "app-guide-country-map": "Landkarte",
-  "app-guide-capitol": "Kapitol",
+  "app-guide-capital": "Hauptstadt",
   "app-guide-form-of-government": "Regierungsform",
   "app-guide-religion": "Religion",
   "app-guide-period": "Zeitraum",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "Radio",
   "app-guide-news-tv": "Fernseher",
   "app-guide-news-economic-indicators": "Ökonomische Indikatoren",
+  "app-guide-conflict-map": "Konfliktkarte",
   "app-guide-ongoing-conflicts": "Konflikte",
   "app-guide-radio": "Radio",
   "app-menu-country-select": "Land",
