--- a/app/explore2/assets/i18n/conzept-es.json
+++ b/app/explore2/assets/i18n/conzept-es.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "asistencia de lectura",
   "app-menu-bread": "negrita de inicio de palabra",
   "app-menu-ai-tutor": "tutor de IA",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "marcar vista actual",
   "app-menu-clone-tab": "pestaña clonar",
   "app-menu-plant-identification": "identificación de plantas",
@@ -184,7 +189,7 @@
   "app-guide-atom": "átomo",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mapa del pais",
-  "app-guide-capitol": "Capitolio",
+  "app-guide-capital": "capital",
   "app-guide-form-of-government": "forma de gobierno",
   "app-guide-religion": "religión",
   "app-guide-period": "período",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "radio",
   "app-guide-news-tv": "TELEVISOR",
   "app-guide-news-economic-indicators": "indicadores económicos",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "conflictos",
   "app-guide-radio": "radio",
   "app-menu-country-select": "país",
