--- a/app/explore2/assets/i18n/conzept-fa.json
+++ b/app/explore2/assets/i18n/conzept-fa.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "کمک خواندن",
   "app-menu-bread": "پررنگ کردن کلمه شروع کنید",
   "app-menu-ai-tutor": "معلم هوش مصنوعی",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "نمای فعلی نشانک",
   "app-menu-clone-tab": "تب کلون",
   "app-menu-plant-identification": "شناسایی گیاه",
@@ -184,7 +189,7 @@
   "app-guide-atom": "اتم",
   "app-guide-protist": "پروتیست",
   "app-guide-country-map": "نقشه کشور",
-  "app-guide-capitol": "کاپیتول",
+  "app-guide-capital": "کاپیتول",
   "app-guide-form-of-government": "شکل حکومت",
   "app-guide-religion": "دین",
   "app-guide-period": "دوره زمانی",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "رادیو",
   "app-guide-news-tv": "تلویزیون",
   "app-guide-news-economic-indicators": "نشانگرهای اقتصادی",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "درگیری ها",
   "app-guide-radio": "رادیو",
   "app-menu-country-select": "کشور",
