--- a/app/explore2/assets/i18n/conzept-fr.json
+++ b/app/explore2/assets/i18n/conzept-fr.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "aide à la lecture",
   "app-menu-bread": "mise en gras du début du mot",
   "app-menu-ai-tutor": "Tuteur IA",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "ajouter la vue actuelle aux favoris",
   "app-menu-clone-tab": "onglet cloner",
   "app-menu-plant-identification": "identification des plantes",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atome",
   "app-guide-protist": "protiste",
   "app-guide-country-map": "carte du pays",
-  "app-guide-capitol": "Capitole",
+  "app-guide-capital": "Capitole",
   "app-guide-form-of-government": "forme de gouvernement.",
   "app-guide-religion": "religion",
   "app-guide-period": "période",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "radio",
   "app-guide-news-tv": "la télé",
   "app-guide-news-economic-indicators": "indicateurs économiques",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "conflits",
   "app-guide-radio": "radio",
   "app-menu-country-select": "pays",
