--- a/app/explore2/assets/i18n/conzept-ha.json
+++ b/app/explore2/assets/i18n/conzept-ha.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "taimakon karatu",
   "app-menu-bread": "kalma-fara ƙarfin hali",
   "app-menu-ai-tutor": "AI mai koyarwa",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "alamar shafi na halin yanzu",
   "app-menu-clone-tab": "clone tab",
   "app-menu-plant-identification": "ganewar shuka",
@@ -184,7 +189,7 @@
   "app-guide-atom": "zarra",
   "app-guide-protist": "karuwai",
   "app-guide-country-map": "taswirar ƙasa",
-  "app-guide-capitol": "babban birnin kasar",
+  "app-guide-capital": "babban birnin kasar",
   "app-guide-form-of-government": "form na gov.",
   "app-guide-religion": "addini",
   "app-guide-period": "lokaci",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "rediyo",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "alamomin tattalin arziki",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "rikice-rikice",
   "app-guide-radio": "rediyo",
   "app-menu-country-select": "kasa",
