--- a/app/explore2/assets/i18n/conzept-hi.json
+++ b/app/explore2/assets/i18n/conzept-hi.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "पढ़ने में सहायता",
   "app-menu-bread": "शब्द-प्रारंभ बोल्डिंग",
   "app-menu-ai-tutor": "एआई ट्यूटर",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "वर्तमान दृश्य को बुकमार्क करें",
   "app-menu-clone-tab": "क्लोन टैब",
   "app-menu-plant-identification": "पौधे की पहचान",
@@ -184,7 +189,7 @@
   "app-guide-atom": "एटम",
   "app-guide-protist": "protist",
   "app-guide-country-map": "देश का नक्शा",
-  "app-guide-capitol": "कैपिटील",
+  "app-guide-capital": "कैपिटील",
   "app-guide-form-of-government": "सरकार का रूप",
   "app-guide-religion": "धर्म",
   "app-guide-period": "अवधि",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "रेडियो",
   "app-guide-news-tv": "टीवी",
   "app-guide-news-economic-indicators": "आर्थिक संकेतक",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "संघर्ष",
   "app-guide-radio": "रेडियो",
   "app-menu-country-select": "देश",
