--- a/app/explore2/assets/i18n/conzept-hr.json
+++ b/app/explore2/assets/i18n/conzept-hr.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "pomoć u čitanju",
   "app-menu-bread": "početak riječi podebljano",
   "app-menu-ai-tutor": "učitelj umjetne inteligencije",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "označi trenutni prikaz",
   "app-menu-clone-tab": "kartica kloniranja",
   "app-menu-plant-identification": "identifikacija biljke",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atom",
   "app-guide-protist": "protist",
   "app-guide-country-map": "karta zemlje",
-  "app-guide-capitol": "glavni grad",
+  "app-guide-capital": "glavni grad",
   "app-guide-form-of-government": "oblik gov.",
   "app-guide-religion": "religija",
   "app-guide-period": "razdoblje",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "radio",
   "app-guide-news-tv": "televizor",
   "app-guide-news-economic-indicators": "ekonomski pokazatelji",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "sukobi",
   "app-guide-radio": "radio",
   "app-menu-country-select": "zemlja",
