--- a/app/explore2/assets/i18n/conzept-id.json
+++ b/app/explore2/assets/i18n/conzept-id.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "bantuan membaca",
   "app-menu-bread": "huruf tebal di awal kata",
   "app-menu-ai-tutor": "guru AI",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "tandai tampilan saat ini",
   "app-menu-clone-tab": "tab klon",
   "app-menu-plant-identification": "identifikasi tanaman",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atom",
   "app-guide-protist": "protista",
   "app-guide-country-map": "peta negara",
-  "app-guide-capitol": "gedung DPR",
+  "app-guide-capital": "gedung DPR",
   "app-guide-form-of-government": "bentuk pemerintahan.",
   "app-guide-religion": "agama",
   "app-guide-period": "periode",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "radio",
   "app-guide-news-tv": "televisi",
   "app-guide-news-economic-indicators": "indikator ekonomi",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "konflik",
   "app-guide-radio": "radio",
   "app-menu-country-select": "negara",
