--- a/app/explore2/assets/i18n/conzept-it.json
+++ b/app/explore2/assets/i18n/conzept-it.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "assistenza alla lettura",
   "app-menu-bread": "inizio parola in grassetto",
   "app-menu-ai-tutor": "Tutor dell'intelligenza artificiale",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "aggiungere la vista corrente ai segnalibri",
   "app-menu-clone-tab": "scheda clone",
   "app-menu-plant-identification": "identificazione delle piante",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atomo",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mappa del paese",
-  "app-guide-capitol": "Campidoglio",
+  "app-guide-capital": "Campidoglio",
   "app-guide-form-of-government": "forma di governo",
   "app-guide-religion": "religione",
   "app-guide-period": "periodo",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "Radio",
   "app-guide-news-tv": "tv",
   "app-guide-news-economic-indicators": "indicatori economici",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "conflitti",
   "app-guide-radio": "Radio",
   "app-menu-country-select": "Paese",
