--- a/app/explore2/assets/i18n/conzept-ja.json
+++ b/app/explore2/assets/i18n/conzept-ja.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "読書補助",
   "app-menu-bread": "単語の先頭を太字にする",
   "app-menu-ai-tutor": "AI家庭教師",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "現在のビューをブックマークする",
   "app-menu-clone-tab": "クローンタブ",
   "app-menu-plant-identification": "植物の同定",
@@ -184,7 +189,7 @@
   "app-guide-atom": "原子",
   "app-guide-protist": "原生生物",
   "app-guide-country-map": "国の地図",
-  "app-guide-capitol": "国会議事堂",
+  "app-guide-capital": "国会議事堂",
   "app-guide-form-of-government": "政府の形式",
   "app-guide-religion": "宗教",
   "app-guide-period": "期間",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "無線",
   "app-guide-news-tv": "テレビ",
   "app-guide-news-economic-indicators": "経済指標",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "衝突",
   "app-guide-radio": "無線",
   "app-menu-country-select": "国",
