--- a/app/explore2/assets/i18n/conzept-mr.json
+++ b/app/explore2/assets/i18n/conzept-mr.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "वाचन सहाय्य",
   "app-menu-bread": "शब्द-प्रारंभ ठळक",
   "app-menu-ai-tutor": "एआय ट्यूटर",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "बुकमार्क वर्तमान दृश्य",
   "app-menu-clone-tab": "क्लोन टॅब",
   "app-menu-plant-identification": "वनस्पती ओळख",
@@ -184,7 +189,7 @@
   "app-guide-atom": "अणू",
   "app-guide-protist": "विरोधक",
   "app-guide-country-map": "देशाचा नकाशा",
-  "app-guide-capitol": "कॅपिटल",
+  "app-guide-capital": "कॅपिटल",
   "app-guide-form-of-government": "शासनाचे स्वरूप.",
   "app-guide-religion": "धर्म",
   "app-guide-period": "कालावधी",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "रेडिओ",
   "app-guide-news-tv": "टीव्ही",
   "app-guide-news-economic-indicators": "आर्थिक निर्देशक",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "संघर्ष",
   "app-guide-radio": "रेडिओ",
   "app-menu-country-select": "देश",
