--- a/app/explore2/assets/i18n/conzept-nl.json
+++ b/app/explore2/assets/i18n/conzept-nl.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "leeshulp",
   "app-menu-bread": "begin-woord nadruk",
   "app-menu-ai-tutor": "AI hulp",
+  "app-menu-datasources": "data bronnen",
+  "app-guide-bookmarks-selected": "geselecteerd",
+  "app-guide-bookmarks-deselect-all": "deselecteer alles",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "bladwijzer huidige URL",
   "app-menu-clone-tab": "tabblad kloon",
   "app-menu-plant-identification": "identificatie van planten",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atoom",
   "app-guide-protist": "protist",
   "app-guide-country-map": "landkaart",
-  "app-guide-capitol": "Capitol",
+  "app-guide-capital": "hoofdstad",
   "app-guide-form-of-government": "vorm van regering",
   "app-guide-religion": "geloof",
   "app-guide-period": "periode",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "radio",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "economische indicatoren",
+  "app-guide-conflict-map": "conflict kaart",
   "app-guide-ongoing-conflicts": "conflicten",
   "app-guide-radio": "radio",
   "app-menu-country-select": "land",
