--- a/app/explore2/assets/i18n/conzept-pt.json
+++ b/app/explore2/assets/i18n/conzept-pt.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "assistência de leitura",
   "app-menu-bread": "negrito no início da palavra",
   "app-menu-ai-tutor": "Tutor de IA",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "marcar a visualização atual",
   "app-menu-clone-tab": "guia clonar",
   "app-menu-plant-identification": "identificação de plantas",
@@ -184,7 +189,7 @@
   "app-guide-atom": "átomo",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mapa do país",
-  "app-guide-capitol": "Capitólio",
+  "app-guide-capital": "Capitólio",
   "app-guide-form-of-government": "forma de governo",
   "app-guide-religion": "religião",
   "app-guide-period": "período",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "rádio",
   "app-guide-news-tv": "televisão",
   "app-guide-news-economic-indicators": "indicadores econômicos",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "conflitos",
   "app-guide-radio": "rádio",
   "app-menu-country-select": "país",
