--- a/app/explore2/assets/i18n/conzept-ru.json
+++ b/app/explore2/assets/i18n/conzept-ru.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "помощь в чтении",
   "app-menu-bread": "начало слова жирным шрифтом",
   "app-menu-ai-tutor": "репетитор по искусственному интеллекту",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "добавить в закладки текущий вид",
   "app-menu-clone-tab": "клонировать вкладку",
   "app-menu-plant-identification": "идентификация растений",
@@ -184,7 +189,7 @@
   "app-guide-atom": "атом",
   "app-guide-protist": "протист",
   "app-guide-country-map": "карта страны",
-  "app-guide-capitol": "Капитолий",
+  "app-guide-capital": "Капитолий",
   "app-guide-form-of-government": "форма гос.",
   "app-guide-religion": "религия",
   "app-guide-period": "период",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "радио",
   "app-guide-news-tv": "ТВ",
   "app-guide-news-economic-indicators": "экономические показатели",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "конфликты",
   "app-guide-radio": "радио",
   "app-menu-country-select": "страна",
