--- a/app/explore2/assets/i18n/conzept-sr.json
+++ b/app/explore2/assets/i18n/conzept-sr.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "помоћ при читању",
   "app-menu-bread": "подебљано на почетку речи",
   "app-menu-ai-tutor": "АИ тутор",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "обележи тренутни приказ",
   "app-menu-clone-tab": "клон картица",
   "app-menu-plant-identification": "идентификација биљке",
@@ -184,7 +189,7 @@
   "app-guide-atom": "атом",
   "app-guide-protist": "протист",
   "app-guide-country-map": "карта земље",
-  "app-guide-capitol": "главни град",
+  "app-guide-capital": "главни град",
   "app-guide-form-of-government": "облик гов.",
   "app-guide-religion": "религија",
   "app-guide-period": "раздобље",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "радио",
   "app-guide-news-tv": "ТВ",
   "app-guide-news-economic-indicators": "економски показатељи",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "сукоби",
   "app-guide-radio": "радио",
   "app-menu-country-select": "земља",
