--- a/app/explore2/assets/i18n/conzept-sw.json
+++ b/app/explore2/assets/i18n/conzept-sw.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "msaada wa kusoma",
   "app-menu-bread": "neno-anza kwa ujasiri",
   "app-menu-ai-tutor": "Mkufunzi wa AI",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "alamisho mwonekano wa sasa",
   "app-menu-clone-tab": "kichupo cha clone",
   "app-menu-plant-identification": "kitambulisho cha mimea",
@@ -184,7 +189,7 @@
   "app-guide-atom": "chembe",
   "app-guide-protist": "mpiga picha",
   "app-guide-country-map": "ramani ya nchi",
-  "app-guide-capitol": "mji mkuu",
+  "app-guide-capital": "mji mkuu",
   "app-guide-form-of-government": "fomu ya gov.",
   "app-guide-religion": "dini",
   "app-guide-period": "kipindi",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "redio",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "viashiria vya kiuchumi",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "migogoro",
   "app-guide-radio": "redio",
   "app-menu-country-select": "nchi",
