--- a/app/explore2/assets/i18n/conzept-ta.json
+++ b/app/explore2/assets/i18n/conzept-ta.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "வாசிப்பு உதவி",
   "app-menu-bread": "வார்த்தை-தொடக்கம் தடித்த",
   "app-menu-ai-tutor": "AI ஆசிரியர்",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "புக்மார்க் தற்போதைய காட்சி",
   "app-menu-clone-tab": "குளோன் தாவல்",
   "app-menu-plant-identification": "தாவர அடையாளம்",
@@ -184,7 +189,7 @@
   "app-guide-atom": "அணு",
   "app-guide-protist": "எதிர்ப்பாளர்",
   "app-guide-country-map": "நாட்டின் வரைபடம்",
-  "app-guide-capitol": "மூலதனம்",
+  "app-guide-capital": "மூலதனம்",
   "app-guide-form-of-government": "ஆட்சி வடிவம்.",
   "app-guide-religion": "மதம்",
   "app-guide-period": "காலம்",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "வானொலி",
   "app-guide-news-tv": "டி.வி",
   "app-guide-news-economic-indicators": "பொருளாதார குறிகாட்டிகள்",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "மோதல்கள்",
   "app-guide-radio": "வானொலி",
   "app-menu-country-select": "நாடு",
