--- a/app/explore2/assets/i18n/conzept-te.json
+++ b/app/explore2/assets/i18n/conzept-te.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "పఠన సహాయం",
   "app-menu-bread": "పదం-ప్రారంభం బోల్డింగ్",
   "app-menu-ai-tutor": "AI బోధకుడు",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "బుక్‌మార్క్ ప్రస్తుత వీక్షణ",
   "app-menu-clone-tab": "క్లోన్ ట్యాబ్",
   "app-menu-plant-identification": "మొక్క గుర్తింపు",
@@ -184,7 +189,7 @@
   "app-guide-atom": "అణువు",
   "app-guide-protist": "ప్రొటిస్ట్",
   "app-guide-country-map": "దేశ పటం",
-  "app-guide-capitol": "కాపిటల్",
+  "app-guide-capital": "కాపిటల్",
   "app-guide-form-of-government": "gov రూపం.",
   "app-guide-religion": "మతం",
   "app-guide-period": "కాలం",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "రేడియో",
   "app-guide-news-tv": "టీవీ",
   "app-guide-news-economic-indicators": "ఆర్థిక సూచికలు",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "గొడవలు",
   "app-guide-radio": "రేడియో",
   "app-menu-country-select": "దేశం",
