--- a/app/explore2/assets/i18n/conzept-tr.json
+++ b/app/explore2/assets/i18n/conzept-tr.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "okuma yardımı",
   "app-menu-bread": "kelime başlangıcı kalınlaştırma",
   "app-menu-ai-tutor": "Yapay zeka öğretmeni",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "geçerli görünüme yer işareti koy",
   "app-menu-clone-tab": "klon sekmesi",
   "app-menu-plant-identification": "bitki tanımlama",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atom",
   "app-guide-protist": "protist",
   "app-guide-country-map": "ülke haritası",
-  "app-guide-capitol": "başkent",
+  "app-guide-capital": "başkent",
   "app-guide-form-of-government": "hükümet biçimi",
   "app-guide-religion": "din",
   "app-guide-period": "dönem",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "radyo",
   "app-guide-news-tv": "televizyon",
   "app-guide-news-economic-indicators": "ekonomik göstergeler",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "çatışmalar",
   "app-guide-radio": "radyo",
   "app-menu-country-select": "ülke",
