--- a/app/explore2/assets/i18n/conzept-uk.json
+++ b/app/explore2/assets/i18n/conzept-uk.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "допомога в читанні",
   "app-menu-bread": "початок слова жирним шрифтом",
   "app-menu-ai-tutor": "ШІ репетитор",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "додати закладку для поточного перегляду",
   "app-menu-clone-tab": "клонувати вкладку",
   "app-menu-plant-identification": "ідентифікація рослин",
@@ -184,7 +189,7 @@
   "app-guide-atom": "атом",
   "app-guide-protist": "протист",
   "app-guide-country-map": "карта країни",
-  "app-guide-capitol": "Капітолій",
+  "app-guide-capital": "Капітолій",
   "app-guide-form-of-government": "форма держ.",
   "app-guide-religion": "релігія",
   "app-guide-period": "період",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "радіо",
   "app-guide-news-tv": "телевізор",
   "app-guide-news-economic-indicators": "економічні показники",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "конфлікти",
   "app-guide-radio": "радіо",
   "app-menu-country-select": "країна",
