--- a/app/explore2/assets/i18n/conzept-zh.json
+++ b/app/explore2/assets/i18n/conzept-zh.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "阅读辅助",
   "app-menu-bread": "词首加粗",
   "app-menu-ai-tutor": "人工智能导师",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "为当前视图添加书签",
   "app-menu-clone-tab": "克隆选项卡",
   "app-menu-plant-identification": "植物鉴定",
@@ -184,7 +189,7 @@
   "app-guide-atom": "原子",
   "app-guide-protist": "原生生物",
   "app-guide-country-map": "国家地图",
-  "app-guide-capitol": "国会大厦",
+  "app-guide-capital": "国会大厦",
   "app-guide-form-of-government": "政府形式",
   "app-guide-religion": "宗教",
   "app-guide-period": "时期",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "收音机",
   "app-guide-news-tv": "电视",
   "app-guide-news-economic-indicators": "经济指标",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "冲突",
   "app-guide-radio": "收音机",
   "app-menu-country-select": "国家",
