--- a/app/explore2/assets/i18n/conzept-da.json
+++ b/app/explore2/assets/i18n/conzept-da.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "læsehjælp",
   "app-menu-bread": "ord-start fed",
   "app-menu-ai-tutor": "AI underviser",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "bogmærke den aktuelle visning",
   "app-menu-clone-tab": "klon fane",
   "app-menu-plant-identification": "planteidentifikation",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atom",
   "app-guide-protist": "protist",
   "app-guide-country-map": "landkort",
-  "app-guide-capitol": "hovedstad",
+  "app-guide-capital": "hovedstad",
   "app-guide-form-of-government": "form for regering.",
   "app-guide-religion": "religion",
   "app-guide-period": "periode",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "radio",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "økonomiske indikatorer",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "konflikter",
   "app-guide-radio": "radio",
   "app-menu-country-select": "Land",
