--- a/app/explore2/assets/i18n/conzept-fi.json
+++ b/app/explore2/assets/i18n/conzept-fi.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "lukuapua",
   "app-menu-bread": "sana-alku lihavointi",
   "app-menu-ai-tutor": "AI tutor",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "merkitse nykyinen näkymä kirjanmerkkeihin",
   "app-menu-clone-tab": "klooni-välilehti",
   "app-menu-plant-identification": "kasvin tunnistaminen",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atomi",
   "app-guide-protist": "protisti",
   "app-guide-country-map": "maan kartta",
-  "app-guide-capitol": "pääkaupunki",
+  "app-guide-capital": "pääkaupunki",
   "app-guide-form-of-government": "hallituksen muoto.",
   "app-guide-religion": "uskonto",
   "app-guide-period": "ajanjaksoa",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "radio",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "taloudelliset indikaattorit",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "konflikteja",
   "app-guide-radio": "radio",
   "app-menu-country-select": "maa",
