--- a/app/explore2/assets/i18n/conzept-ko.json
+++ b/app/explore2/assets/i18n/conzept-ko.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "독서 보조",
   "app-menu-bread": "단어 시작 볼드체",
   "app-menu-ai-tutor": "AI 튜터",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "현재 보기를 북마크에 추가",
   "app-menu-clone-tab": "복제 탭",
   "app-menu-plant-identification": "식물 식별",
@@ -184,7 +189,7 @@
   "app-guide-atom": "원자",
   "app-guide-protist": "원생생물",
   "app-guide-country-map": "국가 지도",
-  "app-guide-capitol": "국회 의사당",
+  "app-guide-capital": "국회 의사당",
   "app-guide-form-of-government": "정부의 형태",
   "app-guide-religion": "종교",
   "app-guide-period": "기간",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "라디오",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "경제 지표",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "갈등",
   "app-guide-radio": "라디오",
   "app-menu-country-select": "국가",
