--- a/app/explore2/assets/i18n/conzept-sv.json
+++ b/app/explore2/assets/i18n/conzept-sv.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "reading assistance",
   "app-menu-bread": "word-start bolding",
   "app-menu-ai-tutor": "AI tutor",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "bokmärke aktuell URL",
   "app-menu-clone-tab": "klonfliken",
   "app-menu-plant-identification": "anläggningsidentifiering",
@@ -184,7 +189,7 @@
   "app-guide-atom": "atom",
   "app-guide-protist": "protist",
   "app-guide-country-map": "landskarta",
-  "app-guide-capitol": "huvudstad",
+  "app-guide-capital": "huvudstad",
   "app-guide-form-of-government": "form av regering.",
   "app-guide-religion": "religion",
   "app-guide-period": "period",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "radio",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "economic indicators",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "conflicts",
   "app-guide-radio": "radio",
   "app-menu-country-select": "Land",
