--- a/app/explore2/assets/i18n/conzept-ur.json
+++ b/app/explore2/assets/i18n/conzept-ur.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "پڑھنے کی مدد",
   "app-menu-bread": "لفظ بولڈ شروع کریں",
   "app-menu-ai-tutor": "اے آئی ٹیوٹر",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "موجودہ منظر کو بُک مارک کریں۔",
   "app-menu-clone-tab": "کلون ٹیب",
   "app-menu-plant-identification": "پلانٹ کی شناخت",
@@ -184,7 +189,7 @@
   "app-guide-atom": "ایٹم",
   "app-guide-protist": "پروٹسٹ",
   "app-guide-country-map": "ملک کا نقشہ",
-  "app-guide-capitol": "کیپٹل",
+  "app-guide-capital": "کیپٹل",
   "app-guide-form-of-government": "حکومت کی شکل",
   "app-guide-religion": "مذہب",
   "app-guide-period": "مدت",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "ریڈیو",
   "app-guide-news-tv": "ٹی وی",
   "app-guide-news-economic-indicators": "اقتصادی اشارے",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "تنازعات",
   "app-guide-radio": "ریڈیو",
   "app-menu-country-select": "ملک",
