--- a/app/explore2/assets/i18n/conzept-vi.json
+++ b/app/explore2/assets/i18n/conzept-vi.json
@@ -72,6 +72,11 @@
   "app-menu-reading-assistance": "hỗ trợ đọc",
   "app-menu-bread": "in đậm đầu từ",
   "app-menu-ai-tutor": "Gia sư AI",
+  "app-menu-datasources": "datasources",
+  "app-guide-bookmarks-selected": "selected",
+  "app-guide-bookmarks-deselect-all": "deselect all",
+  "app-menu-upload-json": "upload",
+  "app-guide-radio-map": "radio map",
   "app-menu-bookmark-current-view": "đánh dấu chế độ xem hiện tại",
   "app-menu-clone-tab": "tab nhân bản",
   "app-menu-plant-identification": "nhận dạng thực vật",
@@ -184,7 +189,7 @@
   "app-guide-atom": "nguyên tử",
   "app-guide-protist": "người bảo vệ",
   "app-guide-country-map": "bản đồ đất nước",
-  "app-guide-capitol": "thủ đô",
+  "app-guide-capital": "thủ đô",
   "app-guide-form-of-government": "hình thức của chính phủ",
   "app-guide-religion": "tôn giáo",
   "app-guide-period": "Giai đoạn",
@@ -216,6 +221,7 @@
   "app-guide-news-radio": "Đài",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "chỉ số kinh tế",
+  "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "xung đột",
   "app-guide-radio": "Đài",
   "app-menu-country-select": "quốc gia",
