--- a/app/explore2/assets/i18n/conzept-ceb.json
+++ b/app/explore2/assets/i18n/conzept-ceb.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "bookmark karon nga pagtan-aw",
   "app-menu-clone-tab": "clone nga tab",
   "app-menu-plant-identification": "pag-ila sa tanom",
