--- a/app/explore2/assets/i18n/conzept-cs.json
+++ b/app/explore2/assets/i18n/conzept-cs.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "uložit aktuální pohled do záložek",
   "app-menu-clone-tab": "karta klon",
   "app-menu-plant-identification": "identifikace rostlin",
