--- a/app/explore2/assets/i18n/conzept-en.json
+++ b/app/explore2/assets/i18n/conzept-en.json
@@ -242,6 +242,7 @@
   "app-guide-news-radio": "radio",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "economic indicators",
+  "app-guide-world-statistics": "world statistics",
   "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "conflicts",
   "app-guide-radio": "radio",
