--- a/app/explore2/assets/i18n/conzept-ar.json
+++ b/app/explore2/assets/i18n/conzept-ar.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "المرجعية العرض الحالي",
   "app-menu-clone-tab": "علامة التبويب استنساخ",
   "app-menu-plant-identification": "تحديد النبات",
