--- a/app/explore2/assets/i18n/conzept-ca.json
+++ b/app/explore2/assets/i18n/conzept-ca.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "marca la vista actual",
   "app-menu-clone-tab": "pestanya de clonació",
   "app-menu-plant-identification": "identificació de plantes",
