--- a/app/explore2/assets/i18n/conzept-de.json
+++ b/app/explore2/assets/i18n/conzept-de.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "Aktuelle Ansicht als Lesezeichen speichern",
   "app-menu-clone-tab": "Registerkarte „Klonen“.",
   "app-menu-plant-identification": "Pflanzenidentifikation",
