--- a/app/explore2/assets/i18n/conzept-fa.json
+++ b/app/explore2/assets/i18n/conzept-fa.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "نمای فعلی نشانک",
   "app-menu-clone-tab": "تب کلون",
   "app-menu-plant-identification": "شناسایی گیاه",
