--- a/app/explore2/assets/i18n/conzept-fi.json
+++ b/app/explore2/assets/i18n/conzept-fi.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "merkitse nykyinen näkymä kirjanmerkkeihin",
   "app-menu-clone-tab": "klooni-välilehti",
   "app-menu-plant-identification": "kasvin tunnistaminen",
