--- a/app/explore2/assets/i18n/conzept-hr.json
+++ b/app/explore2/assets/i18n/conzept-hr.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "označi trenutni prikaz",
   "app-menu-clone-tab": "kartica kloniranja",
   "app-menu-plant-identification": "identifikacija biljke",
