--- a/app/explore2/assets/i18n/conzept-id.json
+++ b/app/explore2/assets/i18n/conzept-id.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "tandai tampilan saat ini",
   "app-menu-clone-tab": "tab klon",
   "app-menu-plant-identification": "identifikasi tanaman",
