--- a/app/explore2/assets/i18n/conzept-it.json
+++ b/app/explore2/assets/i18n/conzept-it.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "aggiungere la vista corrente ai segnalibri",
   "app-menu-clone-tab": "scheda clone",
   "app-menu-plant-identification": "identificazione delle piante",
