--- a/app/explore2/assets/i18n/conzept-ko.json
+++ b/app/explore2/assets/i18n/conzept-ko.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "현재 보기를 북마크에 추가",
   "app-menu-clone-tab": "복제 탭",
   "app-menu-plant-identification": "식물 식별",
