--- a/app/explore2/assets/i18n/conzept-mr.json
+++ b/app/explore2/assets/i18n/conzept-mr.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "बुकमार्क वर्तमान दृश्य",
   "app-menu-clone-tab": "क्लोन टॅब",
   "app-menu-plant-identification": "वनस्पती ओळख",
