--- a/app/explore2/assets/i18n/conzept-nl.json
+++ b/app/explore2/assets/i18n/conzept-nl.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselecteer alles",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "bladwijzer huidige URL",
   "app-menu-clone-tab": "tabblad kloon",
   "app-menu-plant-identification": "identificatie van planten",
