--- a/app/explore2/assets/i18n/conzept-no.json
+++ b/app/explore2/assets/i18n/conzept-no.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "bokmerke gjeldende visning",
   "app-menu-clone-tab": "klone-fanen",
   "app-menu-plant-identification": "planteidentifikasjon",
