--- a/app/explore2/assets/i18n/conzept-pt.json
+++ b/app/explore2/assets/i18n/conzept-pt.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "marcar a visualização atual",
   "app-menu-clone-tab": "guia clonar",
   "app-menu-plant-identification": "identificação de plantas",
