--- a/app/explore2/assets/i18n/conzept-ru.json
+++ b/app/explore2/assets/i18n/conzept-ru.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "добавить в закладки текущий вид",
   "app-menu-clone-tab": "клонировать вкладку",
   "app-menu-plant-identification": "идентификация растений",
