--- a/app/explore2/assets/i18n/conzept-sr.json
+++ b/app/explore2/assets/i18n/conzept-sr.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "обележи тренутни приказ",
   "app-menu-clone-tab": "клон картица",
   "app-menu-plant-identification": "идентификација биљке",
