--- a/app/explore2/assets/i18n/conzept-sv.json
+++ b/app/explore2/assets/i18n/conzept-sv.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "bokmärke aktuell URL",
   "app-menu-clone-tab": "klonfliken",
   "app-menu-plant-identification": "anläggningsidentifiering",
