--- a/app/explore2/assets/i18n/conzept-ta.json
+++ b/app/explore2/assets/i18n/conzept-ta.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "புக்மார்க் தற்போதைய காட்சி",
   "app-menu-clone-tab": "குளோன் தாவல்",
   "app-menu-plant-identification": "தாவர அடையாளம்",
