--- a/app/explore2/assets/i18n/conzept-te.json
+++ b/app/explore2/assets/i18n/conzept-te.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "బుక్‌మార్క్ ప్రస్తుత వీక్షణ",
   "app-menu-clone-tab": "క్లోన్ ట్యాబ్",
   "app-menu-plant-identification": "మొక్క గుర్తింపు",
