--- a/app/explore2/assets/i18n/conzept-ur.json
+++ b/app/explore2/assets/i18n/conzept-ur.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "موجودہ منظر کو بُک مارک کریں۔",
   "app-menu-clone-tab": "کلون ٹیب",
   "app-menu-plant-identification": "پلانٹ کی شناخت",
