--- a/app/explore2/assets/i18n/conzept-zh.json
+++ b/app/explore2/assets/i18n/conzept-zh.json
@@ -77,6 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
+  "app-guide-world-statistics": "world statistics",
   "app-menu-bookmark-current-view": "为当前视图添加书签",
   "app-menu-clone-tab": "克隆选项卡",
   "app-menu-plant-identification": "植物鉴定",
